# DOMjura

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  contest.cpp  contest.h  defines.h  domjudgeapimanager.cpp  domjudgeapimanager.h  gradientcache.cpp  gradientcache.h  group.cpp  group.h  headergraphicsitem.cpp  headergraphicsitem.h  judging.cpp  judging.h  legendagraphicsitem.cpp  legendagraphicsitem.h  main.cpp  maincontroller.cpp  maincontroller.h  maindialog.cpp  maindialog.h  maindialog.ui  problem.cpp  problem.h  problemgraphicsitem.cpp  problemgraphicsitem.h  rankedteam.cpp  rankedteam.h  resultswindow.cpp  resultswindow.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  (+10 more)
docs/html/: aboutdialog_8h.html  aboutdialog_8h.js  aboutdialog_8h__dep__incl.dot  aboutdialog_8h__incl.dot  aboutdialog_8h_source.html  annotated.html  annotated_dup.js  class_d_j_1_1_controller_1_1_main_controller-members.html  class_d_j_1_1_controller_1_1_main_controller.html  class_d_j_1_1_controller_1_1_main_controller.js  class_d_j_1_1_controller_1_1_main_controller__coll__graph.dot  class_d_j_1_1_controller_1_1_main_controller_a1de3f996057ad26778cb8b2f92f91ebf_cgraph.dot  class_d_j_1_1_controller_1_1_standings_controller-members.html  class_d_j_1_1_controller_1_1_standings_controller.html  class_d_j_1_1_controller_1_1_standings_controller.js  class_d_j_1_1_controller_1_1_standings_controller__inherit__graph.dot  class_d_j_1_1_controller_1_1_standings_controller_a5d6aa87087b4d7872acd54ffbd83fb03_cgraph.dot  class_d_j_1_1_controller_1_1_standings_controller_aa732276d816a9b4a8f5717868ef5fd89_cgraph.dot  class_d_j_1_1_controller_1_1_standings_controller_ab4b25f3f12ef87d17f9addb2675dc938_cgraph.dot  class_d_j_1_1_controller_1_1_standings_controller_ab4b25f3f12ef87d17f9addb2675dc938_icgraph.dot  class_d_j_1_1_model_1_1_contest-members.html  class_d_j_1_1_model_1_1_contest.html  class_d_j_1_1_model_1_1_contest.js  class_d_j_1_1_model_1_1_contest__coll__graph.dot  class_d_j_1_1_model_1_1_contest_a7bc24fa145a49e94d36dc39a44b95c22_icgraph.dot  class_d_j_1_1_model_1_1_group-members.html  class_d_j_1_1_model_1_1_group.html  (+257 more)
(+91 files in other folders)
